# RaceAnalyzer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  RUNNING.md  USER_STORIES.md  best_user_stories.md  exemplary-code.md  fly.toml  mid-plan-improvements.md  pyproject.toml  research-brief.md  research-findings.md  seed.md  tailwind.config.js
.claude/commands/: sprint-execute.md
.github/workflows/: refresh.yml  (+1 more)
.streamlit/: config.toml
data/: raceanalyzer.db
docs/: BEGINNER_RACER_PERSONA.md  USER_JOURNEYS.md  USE_CASES_FEED_FIRST_GLANCE.md  USE_CASES_UX_IMPROVEMENT.md  UX_AUDIT_FINDINGS.md
raceanalyzer/: __init__.py  __main__.py  calendar_feed.py  cli.py  config.py  demo.py  elevation.py  pipeline.py  precompute.py  predictions.py  queries.py  refresh.py  rwgps.py  scheduler.py  series.py  stages.py  startlists.py
reviews/: claude-critique.md  consensus.md  gemini-critique.md  openai-o3-critique.md
tests/: conftest.py  test_calendar_feed.py  test_components.py  test_course_predictor.py  test_demo.py  test_elevation.py  test_expansion.py  test_feed.py  test_feed_card.py  test_finish_type.py  test_gap_grouping.py  test_health.py  test_maps.py  test_models.py  test_pipeline.py  test_precompute.py  test_predictions.py  test_queries.py  test_race_type.py  test_refresh.py  test_rwgps.py  test_scheduler.py  test_scraper.py  test_series.py  test_stage_migration.py  test_stage_preview.py  test_stages.py  test_startlists.py  test_teammates.py  test_time_parsing.py  test_ui.py  test_web_feed.py  test_web_preview.py  test_web_scaffold.py
(+149 files in other folders)
