[project]
name = "raceanalyzer"
version = "0.1.0"
description = "PNW bike race analysis: finish type classification, outcome prediction, and rider phenotyping"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "requests-futures>=1.0",
    "pandas>=2.0",
    "click>=8.0",
    "streamlit>=1.36",
    "plotly>=5.18",
    "folium>=0.15",
    "streamlit-folium>=0.20",
    "polyline>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "ruff>=0.3",
    "pre-commit>=3.0",
]

[project.scripts]
raceanalyzer = "raceanalyzer.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["raceanalyzer*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
